--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to my website!</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="/project/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <!--#include virtual="common/nav.html"-->
+    <nav class="flex_cont">
+        <div class="flex_item nav_item">
+            <a href="index.html">Home</a>
+        </div>
+        <div class="flex_item nav_item">
+            <a href="projects.html">Projects</a>
+        </div>
+        <div class="flex_item nav_item">
+            <a href="experience.html">Work Experience</a>
+        </div>
+        <div class="flex_item nav_item">
+            <a href="contact.html">Contact Me</a>
+        </div>
+    </nav>
     <div class="flex_cont">
         <div class="about_me flex_item">
             <p>CS student at UNL</p>
