updated reference to images

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="my_pic flex_item">
-            <img src="/images/redpanda1.jpg" height="318px" width="480px">
+            <img src="images/redpanda1.jpg" height="318px" width="480px">
             <figcaption>Just a pic of my fav animal (change later)</figcaption>
         </div>
     </div>
