--- a/projects.html
+++ b/projects.html
@@ -4,22 +4,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects I have done!</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="scripts/script.js"></script>
 </head>
 
 <body>
-    <nav class="flex_cont">
+    <nav class="flex_cont" onmouseout="hide()">
         <div class="flex_item nav_item">
             <a href="index.html">Home</a>
         </div>
         <div class="flex_item nav_item">
-            <a href="projects.html">Projects</a>
-        </div>
-        <div class="flex_item nav_item">
-            <a href="experience.html">Work Experience</a>
+            <span onmouseover="show('dropdown')">Experience</span>
+            <div class="menu" id="dropdown" onmouseover="show('dropdown')">
+                <div class="flex_item nav_item">
+                    <a href="experience.html">Work Experiences</a>
+                </div>
+                <div class="flex_item nav_item">
+                    <a href="projects.html">Projects</a>
+                </div>
+            </div>
         </div>
         <div class="flex_item nav_item">
             <a href="contact.html">Contact Me</a>
+        </div>
+        <div class="flex_item nav_item">
+            <button type="button" class="btn btn-primary" onclick="toggleColorMode()">light mode</button>
         </div>
     </nav>
 
