fixed dropdown bug

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="index.html">Home</a>
         </div>
         <div class="flex_item nav_item">
-            <span onmouseover="show('dropdown')">Experience</span>
+            <a href="#" onmouseover="show('dropdown')">Experience</a>
             <div class="menu" id="dropdown" onmouseover="show('dropdown')">
                 <div class="flex_item nav_item">
                     <a href="experience.html">Work Experiences</a>
