--- a/index.html
+++ b/index.html
@@ -5,37 +5,32 @@
     <title>Welcome to my website!</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <script src="scripts/script.js"></script> 
+    <script src="scripts/script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.4.456/pdf.min.js"></script> 
 </head>
 
 <body>
     <nav class="flex_cont" onmouseout="hide()">
         <div class="flex_item nav_item">
-            <a href="index.html">Home</a>
+            <a>Home</a>
         </div>
         <div class="flex_item nav_item">
-            <a href="#" onmouseover="show('dropdown')">Experience</a>
-            <div class="menu" id="dropdown" onmouseover="show('dropdown')">
-                <div class="flex_item nav_item">
-                    <a href="experience.html">Work Experiences</a>
-                </div>
-                <div class="flex_item nav_item">
-                    <a href="projects.html">Projects</a>
-                </div>
-            </div>
+            <a href="experience.html">Resume</a>
         </div>
         <div class="flex_item nav_item">
-            <a href="contact.html">Contact Me</a>
+            <a href="contact.php">Contact Me</a>
         </div>
         <div class="flex_item nav_item">
-            <button id="toggle" type="button" class="btn btn-primary" onclick="toggleColorMode()">light mode</button>
+            <button id="toggle" type="button" class="btn btn-primary" onclick="toggleColorMode()">Light Mode</button>
         </div>
+    </nav>
     </nav>
 
     <div class="flex_cont">
         <div class="about_me flex_item">
-            <p>CS student at UNL</p>
-            <h1>Hi, I'm Jaron, <br> and I love Computer Science!</h1>
+            <h1>Hi, I'm Jaron!</h1>
+            <span class="text first-text">I'm a</span>
+            <span class="text sec-text"></span>
         </div>
 
         <div class="my_pic flex_item">
@@ -43,6 +38,25 @@
             <figcaption>Just a pic of my fav animal (change later)</figcaption>
         </div>
     </div>
+
+    <script>
+        const text = document.querySelector(".sec-text");
+        const textLoad = () => {
+            setTimeout(() => {
+                text.textContent = "CS Student"
+            }, 0);
+            setTimeout(() => {
+                text.textContent = "Developer"
+            }, 3000);
+            setTimeout(() => {
+                text.textContent = "Designer"
+            }, 6000);
+        
+        }
+
+        textLoad();
+        setInterval(textLoad, 9000);
+    </script>
 
 </body>
 </html>
